@@ -91,3 +91,4 @@ require 'oci8/metadata.rb'
 require 'oci8/compat.rb'
 require 'oci8/object.rb'
 require 'oci8/connection_pool.rb'
+require 'oci8/properties.rb'
