@@ -5,3 +5,4 @@ oracle_version.rb
 oci8.rb
 ocihandle.rb
 connection_pool.rb
+properties.rb
